--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <source src="video/fireplace.webm" type="video/webm">
                 </video>
                 <div class="descr-company">
-                    <h1 class="company-name">KUMA ~ COMPANY</h1>
+                    <h1 class="company-name" style="margin-top: -10rem;">KUMA ~ COMPANY</h1>
                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
                         встраивания и безупречной работы каминов</p>
                 </div>
@@ -1844,4 +1844,5 @@
     <script src="js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </body>
+
 </html>
