--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                 </video>
                 <div class="descr-company">
                     <h1 class="company-name" style="margin-top: -10rem;">KUMA ~ COMPANY</h1>
-                    <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
-                        встраивания и безупречной работы каминов</p>
+<!--                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
+                        встраивания и безупречной работы каминов</p> -->
                 </div>
             </div>
         </header>
@@ -1846,3 +1846,4 @@
 </body>
 
 </html>
+
