--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <source src="video/fireplace.webm" type="video/webm">
                 </video>
                 <div class="descr-company">
-                    <h1 class="company-name" style="margin-top: -10rem;">KUMA ~ COMPANY</h1>
+                    <h1 class="company-name" style="margin-bottom:5rem;">KUMA ~ COMPANY</h1>
 <!--                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
                         встраивания и безупречной работы каминов</p> -->
                 </div>
@@ -1846,4 +1846,5 @@
 </body>
 
 </html>
+
 
