--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                 </video>
                 <div class="descr-company">
                     <h1 class="company-name" style="margin-bottom:5rem;">KUMA ~ COMPANY</h1>
-<!--                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
-                        встраивания и безупречной работы каминов</p> -->
+                    <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
+                        встраивания и безупречной работы каминов</p>
                 </div>
             </div>
         </header>
@@ -1846,5 +1846,6 @@
 </body>
 
 </html>
+
 
 
