--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             </div>
 
             <div class="container">
-                <video class="video-content" muted autoplay loop style="opacity: 0.6;">
+<!--                 <video class="video-content" muted autoplay loop style="opacity: 0.6;">
                     <source src="video/fireplace.webm" type="video/webm">
-                </video>
+                </video> -->
                 <div class="descr-company">
                     <h1 class="company-name" style="margin-bottom:5rem;">KUMA ~ COMPANY</h1>
                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
@@ -1846,6 +1846,7 @@
 </body>
 
 </html>
+
 
 
 
