--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
 
             <div class="container">
                 <video class="video-content" muted autoplay loop style="opacity: 0.6;">
-                    <source src="video/fireplace.webm" type="video/webm">
+                    <source src="video/fireplace.mp4" type="video/webm">
                 </video>
                 <div class="descr-company">
-                    <h1 class="company-name" style="margin-bottom:5rem;">KUMA ~ COMPANY</h1>
+                    <h1 class="company-name">KUMA ~ COMPANY</h1>
                     <p class="company-descr">Официальный дилер ведущих мировых производителей и оборудования для
                         встраивания и безупречной работы каминов</p>
                 </div>
@@ -1846,6 +1846,7 @@
 </body>
 
 </html>
+
 
 
 
